# Deployooor

./: .env  .gitignore  README.md  cargo.toml  package-lock.json  package.json  svelte.config.js  tailwind.config.js
.svelte-kit/: ambient.d.ts
deployooor_core/: Cargo.toml  multisig.vy
deployooor_core/src/: config.rs  database.rs  deploy.rs  errors.rs  keys.rs  lib.rs  solc.rs
deployooor_core/~/.config/nvim-data/undodir/: %Users%crypdoughdoteth%dev%active%VyperDeployooor%cargo.toml  %Users%crypdoughdoteth%dev%active%VyperDeployooor%deployooor-core%Cargo.toml  %Users%crypdoughdoteth%dev%active%VyperDeployooor%deployooor-core%src%config.rs  %Users%crypdoughdoteth%dev%active%VyperDeployooor%deployooor-core%src%database.rs  %Users%crypdoughdoteth%dev%active%VyperDeployooor%deployooor-core%src%deploy.rs  %Users%crypdoughdoteth%dev%active%VyperDeployooor%deployooor-core%src%errors.rs  %Users%crypdoughdoteth%dev%active%VyperDeployooor%deployooor-core%src%keys.rs  %Users%crypdoughdoteth%dev%active%VyperDeployooor%deployooor-core%src%lib.rs  %Users%crypdoughdoteth%dev%active%VyperDeployooor%deployooor-core%src%main.rs  %Users%crypdoughdoteth%dev%active%VyperDeployooor%deployooor-core%src%solc.rs  %Users%crypdoughdoteth%dev%active%VyperDeployooor%deployooor_core%Cargo.toml  %Users%crypdoughdoteth%dev%active%VyperDeployooor%deployooor_core%src%config.rs  %Users%crypdoughdoteth%dev%active%VyperDeployooor%deployooor_core%src%database.rs  %Users%crypdoughdoteth%dev%active%VyperDeployooor%deployooor_core%src%deploy.rs  %Users%crypdoughdoteth%dev%active%VyperDeployooor%deployooor_core%src%errors.rs  %Users%crypdoughdoteth%dev%active%VyperDeployooor%deployooor_core%src%keys.rs  %Users%crypdoughdoteth%dev%active%VyperDeployooor%deployooor_core%src%lib.rs  %Users%crypdoughdoteth%dev%active%VyperDeployooor%deployooor_core%src%solc.rs  %Users%crypdoughdoteth%dev%active%VyperDeployooor%deployooor_gui%src-tauri%Cargo.toml  %Users%crypdoughdoteth%dev%active%VyperDeployooor%deployooor_gui%src-tauri%src%config.rs  %Users%crypdoughdoteth%dev%active%VyperDeployooor%deployooor_gui%src-tauri%src%db.rs  %Users%crypdoughdoteth%dev%active%VyperDeployooor%deployooor_gui%src-tauri%src%deploy.rs  %Users%crypdoughdoteth%dev%active%VyperDeployooor%deployooor_gui%src-tauri%src%key_tree.rs  %Users%crypdoughdoteth%dev%active%VyperDeployooor%deployooor_gui%src-tauri%src%main.rs  %Users%crypdoughdoteth%dev%active%VyperDeployooor%deployooor_tui%Cargo.toml  %Users%crypdoughdoteth%dev%active%VyperDeployooor%deployooor_tui%src%main.rs
deployooor_tui/: .env  Cargo.toml  deployer.db
deployooor_tui/.sqlx/: query-f77ed534a70b49218e0b580161fbb9539e15d3a2d7935631ee4c0e5e17068a8c.json
deployooor_tui/src/: config.rs  database.rs  deploy.rs  errors.rs  home.rs  keys.rs  main.rs  settings.rs  solc.rs  ui.rs  utils.rs  wallet.rs
deployooor_tui/~/.config/nvim-data/undodir/: %Users%crypdoughdoteth%dev%active%VyperDeployooor%deployooor_tui%.env  %Users%crypdoughdoteth%dev%active%VyperDeployooor%deployooor_tui%src%database.rs  %Users%crypdoughdoteth%dev%active%VyperDeployooor%src-tauri%Cargo.toml  %Users%crypdoughdoteth%dev%active%VyperDeployooor%src-tauri%src%solc.rs  %Users%crypdoughdoteth%dev%active%deployooor_tui%.env  %Users%crypdoughdoteth%dev%active%deployooor_tui%Cargo.toml  %Users%crypdoughdoteth%dev%active%deployooor_tui%migrations%0001_deployer.sql  %Users%crypdoughdoteth%dev%active%deployooor_tui%multisig.vy  %Users%crypdoughdoteth%dev%active%deployooor_tui%src%app.rs  %Users%crypdoughdoteth%dev%active%deployooor_tui%src%config.rs  %Users%crypdoughdoteth%dev%active%deployooor_tui%src%database.rs  (+7 more)
src/: App.tsx  (+9 more)
src-tauri/: .gitignore  Cargo.toml  asdf  asdfd  asdw  asdwasd  asdwda  asdwdad  asdwdadadwd  build.rs  key  lvcky  multisig.vy  name  pass  something  tauri.conf.json  test  test_one  testing_keystore  vyper_deployer_config.json
src-tauri/.sqlx/: query-1b361d977d3bf492e946e7382f5fe2c8307aea9b1f85a0a336347b3320e0f074.json  query-f8e6b48997dbf803bbb7a29acafa55192b163a72f21a268177654b3af41e9f8f.json
src-tauri/src/: config.rs  db.rs  deploy.rs  deployment_log.rs  key_tree.rs  main.rs  solc.rs  stylus.rs  verification.rs  vyper.rs
src-tauri/src/soliditylayout/contracts/: combined.json  output.json
(+133 files in other folders)
