[package]
name = "deployooor_core"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.1.4", features = ["full", "node-bindings", "signer-keystore"] }
hex = "0.4.3"
ratatui = { version = "0.27.0", features = ["all-widgets"]}
vyper-rs = "2.0.1"
thiserror = "1.0.61"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
rand = "0.8.5"
tokio = {version = "1.38.0", features = ["rt-multi-thread", "macros"]}
itertools = "0.13.0"
rusqlite = { version = "0.32.0", features = ["bundled"] }
url = {version = "2.5.2", features = ["serde"]}
