[package]
name = "deployooor_tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = { version = "0.27.0", features = ["all-widgets"]}
thiserror = "1.0.61"
tabled = "0.15.0"
tokio = {version = "1.38.0", features = ["rt-multi-thread", "macros"]}
strum = "0.26.3"
color-eyre = "0.6.3"
deployooor_core = {path = "../deployooor_core/"}
arboard = "3.4.1"
url = "2.5.2"
rayon = "1.10.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
