[package]
name = "vyper-deployooor"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.75"
tokio = { version = "1.32.0", features = ["full"] }
sqlx = { version = "= 0.7.0", features = ["runtime-tokio-native-tls", "sqlite"] }
once_cell = "1.18.0"
tabled = "0.14.0"
ethers = {version = "2.0.9" , features = ["ethers-solc"]}
vyper-rs = "2.0.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
